...
            "value": "Document"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "文档"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "文件"
...
            "value": "Photo"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "照片"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "照片"
...
            "value": "Vidéo"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "视频"
          }
        },
        "zh-Hant": {
          "stringUnit": {
            "state": "translated",
            "value": "影片"
...
